feat: link graphic interface and compilator, run the compiled files